Algunos cambios e implementacion de ejemplos

--- a/templates/recorder.html
+++ b/templates/recorder.html
@@ -69,7 +69,7 @@
    
         // Función para mostrar el código del buzzer
         function showBuzzerCode() {
-            fetch("/example_buzzer")
+            fetch("examples/example_buzzer")
                 .then(response => response.json())
                 .then(data => {
                     if (data.result === "ok") {
@@ -78,9 +78,58 @@
                     }
                 });
         }
-   
+        
+        // Función para mostrar el código del buzzer con boton
+        function showBuzzerButtonCode() {
+            fetch("examples/example_button_buzzer")
+                .then(response => response.json())
+                .then(data => {
+                    if (data.result === "ok") {
+                        document.getElementById("button_buzzer-code").textContent = data.code;
+                        Prism.highlightAll(); // Resaltar la sintaxis
+                    }
+                });
+        }
+
+        // Función para mostrar el código del relay
+        function showRelayCode() {
+            fetch("examples/example_relay")
+                .then(response => response.json())
+                .then(data => {
+                    if (data.result === "ok") {
+                        document.getElementById("relay-code").textContent = data.code;
+                        Prism.highlightAll(); // Resaltar la sintaxis
+                    }
+                });
+        }
+
+        function showVibrationCode() {
+            fetch("example_vibration")
+                .then(response => response.json())
+                .then(data => {
+                    if (data.result === "ok") {
+                        document.getElementById("relay-code").textContent = data.code;
+                        Prism.highlightAll(); // Resaltar la sintaxis
+                    }
+                });
+        }
+
+        function showCommands() {
+            fetch("commands")
+                .then(response => response.json())
+                .then(data => {
+                    if (data.result === "ok") {
+                        document.getElementById("relay-code").textContent = data.code;
+                        Prism.highlightAll(); // Resaltar la sintaxis
+                    }
+                });
+        }
+
         // Llamar a la función para mostrar el código del buzzer cuando se cargue la página
         showBuzzerCode();
+        showBuzzerButtonCode();
+        showRelayCode();
+        showCommands();
     </script>
 
   </body>
