Integracion de ejemplos y comandos

--- a/templates/recorder.html
+++ b/templates/recorder.html
@@ -126,7 +126,21 @@
         showCode("examples/example_button_buzzer", "button_buzzer-code");
         showCode("examples/example_relay", "relay-code");
         showCode("commands", "relay-code");
-        
+        showCode("examples/example_blinking_led", "blink_led-code");
+        showCode("examples/example_light_sensor", "light_sensor-code");
+        showCode("examples/example_dht_sensor", "dht_sensor-code");
+        showCode("examples/example_motion_sensor", "motion_sensor-code");
+        showCode("examples/example_distancia_sensor", "distancia_sensor-code");
+        showCode("examples/example_screen_lcd", "screen_lcd-code");
+        showCode("examples/example_stepmotor", "stepmotor-code");
+        showCode("examples/example_servomotor", "servomotor-code");
+        showCode("examples/example_matrix", "matrix-code");
+        showCode("examples/example_segment", "segment-code");
+        showCode("examples/example_touch_sensor", "touch_sensor-code");
+        showCode("examples/example_tilt", "tilt-code");
+        showCode("examples/example_button_matrix", "button_matrix-code");
+        showCode("examples/example_remote_controller", "remote_controller-code");
+
     </script>
 
   </body>
