Integracion del led y mas sensores

--- a/templates/recorder.html
+++ b/templates/recorder.html
@@ -22,7 +22,7 @@
       
       <!-- Imagen del robot -->
       <div class="robot-container">
-        <img class="robot-img" src="static/img/robot.jpg" alt="Robot" />
+        <img class="robot-img" src="static/img/robot.png" alt="Robot" />
       </div>
 
       <!-- Sección de ayuda -->
