--- a/static/recorder.css
+++ b/static/recorder.css
@@ -158,7 +158,6 @@ h1 {
   padding: 30px;
   max-width: 100%;
   margin: 25px auto;
-  font-size: 25px;
 }
 
 .help-container h2 {
@@ -171,3 +170,114 @@ h1 {
   font-size: 21px;
 }
 
+
+/* Responsividad */
+@media screen and (max-width: 768px) {
+  .response-box {
+    margin-bottom: 0px;
+    padding: 0px; /* Reducir el padding para evitar scroll */
+  }
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  .btn-record {
+    width: 100px;
+    height: 100px;
+    font-size: 16px;
+  }
+
+  .robot-container {
+    max-width: 120px;
+  }
+
+  .robot-img {
+    width: 100%;
+    margin-bottom: 5px;
+  }
+
+  .help-container {
+    padding: 15px;
+  }
+
+  #text, #buzzer-code {
+    font-size: 14px;
+  }
+
+  .help-container h2 {
+    color: #ffffff;
+    margin-bottom: 10px;
+  }
+  
+  .help-container p {
+    color: hsl(0, 0%, 100%);
+    font-size: 15px;
+  }
+  
+}
+
+@media screen and (max-width: 480px) {
+  .response-box {
+    margin-bottom: 0px;
+    padding: 0px; /* Reducir más el padding */
+    box-shadow: 0 0 0px rgba(0, 255, 255, 0.7); /* Sombra aún más pequeña */
+  }
+
+  h2 {
+    font-size: 1.3rem;
+    margin-top: 5px;
+  }
+
+  h1 {
+    font-size: 1.3rem;
+    margin-top: 1px;
+  }
+
+  .btn-record {
+    width: 80px;
+    height: 80px;
+    font-size: 16px;
+  }
+
+  .robot-container {
+    max-width: 100px;
+    margin: 0px, auto;
+  }
+
+  .robot-img {
+    width: 100%;
+    margin: 2px;
+  }
+
+  .help-container {
+    padding: 5px;
+    margin: 0px, auto;
+  }
+
+  #text, #buzzer-code {
+    font-size: 10px;
+  }
+
+  .help-container h2 {
+    color: #ffffff;
+    margin-bottom: 14px;
+  }
+  
+  .help-container p {
+    color: hsl(0, 0%, 100%);
+    font-size: 14px;
+  }
+
+  .recording-wave {
+    padding: 5px;
+    margin-top: 10px;
+  }
+  
+  .wave {
+    width: 3px;
+    height: 5px;
+    margin: 0px, 3px;
+  }
+  
+}
